--- a/features.ipynb
+++ b/features.ipynb
@@ -2727,146 +2727,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold: 22150.528374546026\n",
+      "Number of reviews above threshold: 0\n",
+      "Number of reviews below threshold: 1000\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_14280\\936073606.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Column not found: similarity_score'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 38\u001b[0m\n\u001b[0;32m     35\u001b[0m     df\u001b[38;5;241m.\u001b[39miloc[start_idx:end_idx] \u001b[38;5;241m=\u001b[39m process_batch(batch)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;66;03m# Calculate average similarity score per user\u001b[39;00m\n\u001b[1;32m---> 38\u001b[0m user_similarity \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43muser_id\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msimilarity_score\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mmean()\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# Calculate average time difference per user\u001b[39;00m\n\u001b[0;32m     41\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "File \u001b[1;32mc:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\groupby\\generic.py:1964\u001b[0m, in \u001b[0;36mDataFrameGroupBy.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1957\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(key) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1958\u001b[0m     \u001b[38;5;66;03m# if len == 1, then it becomes a SeriesGroupBy and this is actually\u001b[39;00m\n\u001b[0;32m   1959\u001b[0m     \u001b[38;5;66;03m# valid syntax, so don't raise\u001b[39;00m\n\u001b[0;32m   1960\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1961\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot subset columns with a tuple with more than one element. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1962\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUse a list instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1963\u001b[0m     )\n\u001b[1;32m-> 1964\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\base.py:244\u001b[0m, in \u001b[0;36mSelectionMixin.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    242\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    243\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj:\n\u001b[1;32m--> 244\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumn not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    245\u001b[0m     ndim \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj[key]\u001b[38;5;241m.\u001b[39mndim\n\u001b[0;32m    246\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_gotitem(key, ndim\u001b[38;5;241m=\u001b[39mndim)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Column not found: similarity_score'"
+      "C:\\Users\\Shiva\\AppData\\Local\\Temp\\ipykernel_15320\\964442288.py:42: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['time'] = pd.to_datetime(df['time'])\n"
      ]
     }
    ],
@@ -2904,8 +2782,90 @@
     "for i in range(num_batches):\n",
     "    start_idx = i * batch_size\n",
     "    end_idx = min((i + 1) * batch_size, len(df))\n",
-    "    batch = df.iloc[start_idx:end_idx].copy()  # Make a copy of the batch to avoid SettingWithCopyWarning\n",
+    "    batch = df.iloc[start_idx:end_idx]\n",
     "    df.iloc[start_idx:end_idx] = process_batch(batch)\n",
+    "\n",
+    "# Calculate average similarity score per user\n",
+    "user_similarity = df.groupby('user_id')['similarity_score'].mean()\n",
+    "\n",
+    "# Calculate average time difference per user\n",
+    "df['time'] = pd.to_datetime(df['time'])\n",
+    "user_time_difference = df.groupby('user_id')['time'].apply(lambda x: (x.max() - x.min()).total_seconds()).mean()\n",
+    "\n",
+    "# Calculate the threshold\n",
+    "threshold = user_similarity.mean() * user_time_difference\n",
+    "\n",
+    "# Count reviews above and below threshold\n",
+    "above_threshold_count = (df['similarity_score'] > threshold).sum()\n",
+    "below_threshold_count = (df['similarity_score'] <= threshold).sum()\n",
+    "\n",
+    "# Print the results\n",
+    "print(f'Threshold: {threshold}')\n",
+    "\n",
+    "print(f'Number of reviews above threshold: {above_threshold_count}')\n",
+    "print(f'Number of reviews below threshold: {below_threshold_count}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold: 22150.528374546026\n",
+      "Number of reviews above threshold: 0\n",
+      "Number of reviews below threshold: 1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Shiva\\AppData\\Local\\Temp\\ipykernel_15320\\964442288.py:42: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['time'] = pd.to_datetime(df['time'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import spacy\n",
+    "\n",
+    "# Load English tokenizer, tagger, parser, and word vectors\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
+    "\n",
+    "# Read the first 1000 reviews from the CSV file\n",
+    "df = pd.read_csv('CleanedDataset.csv', nrows=1000)\n",
+    "\n",
+    "# Preprocess text data\n",
+    "df['text'] = df['text'].apply(lambda text: text.lower())\n",
+    "\n",
+    "# Vectorize text data\n",
+    "df['text_vector'] = list(nlp.pipe(df['text']))\n",
+    "\n",
+    "# Define function to calculate similarity score\n",
+    "def calculate_similarity(text1, text2):\n",
+    "    return text1.similarity(text2)\n",
+    "\n",
+    "# Process batch\n",
+    "def process_batch(batch):\n",
+    "    if len(batch) == 0:\n",
+    "        return batch\n",
+    "    text1 = batch.iloc[0]['text_vector']\n",
+    "    batch['similarity_score'] = batch['text_vector'].apply(lambda text2: calculate_similarity(text1, text2))\n",
+    "    return batch\n",
+    "\n",
+    "# Batch processing\n",
+    "batch_size = 100\n",
+    "num_batches = len(df) // batch_size + 1\n",
+    "\n",
+    "for i in range(num_batches):\n",
+    "    start_idx = i * batch_size\n",
+    "    end_idx = min((i + 1) * batch_size, len(df))\n",
+    "    batch = df.iloc[start_idx:end_idx].copy()  # Create a copy to avoid SettingWithCopyWarning\n",
+    "    df.loc[start_idx:end_idx, 'similarity_score'] = process_batch(batch)['similarity_score']\n",
     "\n",
     "# Calculate average similarity score per user\n",
     "user_similarity = df.groupby('user_id')['similarity_score'].mean()\n",
