--- a/1.ipynb
+++ b/1.ipynb
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
