--- a/features.ipynb
+++ b/features.ipynb
@@ -9,28 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_3904\\3660863073.py:27: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_reviews['rule1_threshold'] = filtered_reviews.apply(lambda row: 0 if row['stars'] < rating_threshold and row['sentiment_score'] < sentiment_threshold else 1, axis=1)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rating Threshold: 3.863291261666425\n",
-      "Sentiment Score Threshold: 0.2416720672520349\n",
-      "Number of Filtered Reviews: 24367\n"
+      "Count of reviews with rule1_threshold equal to 0 and 1:\n",
+      "rule1_threshold\n",
+      "1    41102\n",
+      "0    12358\n",
+      "Name: count, dtype: int64\n",
+      "Rating Threshold: 3.8563973063973065\n",
+      "Sentiment Score Threshold: 0.23259107181563363\n",
+      "Number of Reviews: 53460\n"
      ]
     }
    ],
@@ -39,7 +32,7 @@
     "from textblob import TextBlob\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('btp.csv')\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
     "\n",
     "# Calculate the combined rating of all users\n",
     "combined_rating = df['stars'].mean()\n",
@@ -54,23 +47,26 @@
     "combined_sentiment_score = df['sentiment_score'].mean()\n",
     "\n",
     "# Determine the threshold sentiment score based on the combined sentiment score\n",
-    "sentiment_threshold =  combined_sentiment_score\n",
+    "sentiment_threshold = combined_sentiment_score\n",
     "\n",
-    "# Filter reviews based on both rating and sentiment score thresholds\n",
-    "filtered_reviews = df[(df['stars'] < rating_threshold) & (df['sentiment_score'] < sentiment_threshold)]\n",
+    "# Label all reviews based on the condition\n",
+    "df['rule1_threshold'] = df.apply(lambda row: 0 if row['stars'] < rating_threshold and row['sentiment_score'] < sentiment_threshold else 1, axis=1)\n",
     "\n",
-    "\n",
-    "# Label the filtered reviews based on the condition\n",
-    "filtered_reviews['rule1_threshold'] = filtered_reviews.apply(lambda row: 0 if row['stars'] < rating_threshold and row['sentiment_score'] < sentiment_threshold else 1, axis=1)\n",
-    "\n",
-    "# Save the filtered reviews with the new column to a new CSV file\n",
-    "filtered_reviews.to_csv('threshold_values.csv', index=False)\n",
+    "# Save the DataFrame with the new column to a new CSV file\n",
+    "df.to_csv('threshold.csv', index=False)\n",
     "\n",
     "# Display the thresholds and the number of filtered reviews\n",
-    "num_filtered_reviews = len(filtered_reviews)\n",
+    "\n",
+    "\n",
+    "num_filtered_reviews = len(df)\n",
+    "rule_counts = df['rule1_threshold'].value_counts()\n",
+    "\n",
+    "# Display the counts\n",
+    "print(\"Count of reviews with rule1_threshold equal to 0 and 1:\")\n",
+    "print(rule_counts)\n",
     "print(f\"Rating Threshold: {rating_threshold}\")\n",
     "print(f\"Sentiment Score Threshold: {sentiment_threshold}\")\n",
-    "print(f\"Number of Filtered Reviews: {num_filtered_reviews}\")\n"
+    "print(f\"Number of Reviews: {num_filtered_reviews}\")\n"
    ]
   },
   {
@@ -82,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average useful counts of all reviews: 2.1193417326712356\n",
-      "Number of reviews above threshold: 6656\n",
-      "Number of reviews below threshold: 17711\n"
+      "Average useful counts of all reviews: 2.151889263000374\n",
+      "Number of reviews above threshold: 15213\n",
+      "Number of reviews below threshold: 38247\n"
      ]
     }
    ],
@@ -99,23 +95,23 @@
     "import pandas as pd\n",
     "\n",
     "# Read the existing threshold_values.csv\n",
-    "threshold_df = pd.read_csv('threshold_values.csv')\n",
+    "threshold_df = pd.read_csv('threshold.csv')\n",
     "\n",
     "# Calculate the average of the 'useful' column\n",
-    "average_useful = threshold_df['useful_review'].mean()\n",
+    "average_useful = threshold_df['useful'].mean()\n",
     "\n",
     "# Define the threshold\n",
     "threshold = average_useful\n",
     "\n",
     "# Label the reviews based on the threshold\n",
-    "threshold_df['rule5_threshold'] = threshold_df['useful_review'].apply(lambda x: 1 if x > threshold else 0)\n",
+    "threshold_df['rule5_threshold'] = threshold_df['useful'].apply(lambda x: 1 if x > threshold else 0)\n",
     "\n",
     "# Save the modified DataFrame back to threshold_values.csv\n",
-    "threshold_df.to_csv('threshold_values.csv', index=False)\n",
+    "threshold_df.to_csv('threshold.csv', index=False)\n",
     "\n",
     "# Count reviews above and below threshold\n",
-    "above_threshold_count = threshold_df[threshold_df['useful_review'] > threshold].shape[0]\n",
-    "below_threshold_count = threshold_df[threshold_df['useful_review'] <= threshold].shape[0]\n",
+    "above_threshold_count = threshold_df[threshold_df['useful'] > threshold].shape[0]\n",
+    "below_threshold_count = threshold_df[threshold_df['useful'] <= threshold].shape[0]\n",
     "\n",
     "# Print the results\n",
     "print(f'Average useful counts of all reviews: {average_useful}')\n",
