--- a/features.ipynb
+++ b/features.ipynb
@@ -177,27 +177,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                     text  sentiment_score\n",
-      "0       Remarkable food with beach access for the whol...         0.405455\n",
-      "1       I loved everything about this lovely train sta...         0.598016\n",
-      "2       The Praline Connection makes a mean po' boy.  ...         0.024826\n",
-      "3       We walked over to Tennessee Brew Works, one of...         0.144998\n",
-      "4       Logan Circle, also known as Logan Square, is a...         0.140657\n",
-      "...                                                   ...              ...\n",
-      "103390  What an awesome place with a great vibe. Very ...         0.611429\n",
-      "103391  This is an old style café with a lot of menu c...         0.407963\n",
-      "103392  Great little coffee shop. Some nice pastries r...         0.358185\n",
-      "103393  This is a fun place for awesome drinks and awe...         0.451000\n",
-      "103394  Great little coffee shop. Some nice pastries r...         0.326935\n",
+      "                                                    text  sentiment_score\n",
+      "0      Remarkable food with beach access for the whol...         0.405455\n",
+      "1      I loved everything about this lovely train sta...         0.598016\n",
+      "2      The Praline Connection makes a mean po' boy.  ...         0.024826\n",
+      "3      We walked over to Tennessee Brew Works, one of...         0.144998\n",
+      "4      Logan Circle, also known as Logan Square, is a...         0.140657\n",
+      "...                                                  ...              ...\n",
+      "53455  I thought this place was great!! We sat outsid...         0.281754\n",
+      "53456  Really cute set up and the food is super fresh...         0.338333\n",
+      "53457  This was my first time staying at a JW Marriot...         0.177450\n",
+      "53458  Ended up here twice on our recent trip to Phil...         0.203958\n",
+      "53459  If you are looking for greek food this is the ...         0.297286\n",
       "\n",
-      "[103395 rows x 2 columns]\n"
+      "[53460 rows x 2 columns]\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
     "from textblob import TextBlob\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('btp.csv')\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
     "\n",
     "# Define a function to calculate sentiment score using TextBlob\n",
     "def calculate_sentiment(text):\n",
@@ -2458,17 +2458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Text Length: 773.362532734755\n",
-      "Threshold Value: 773.362532734755\n",
-      "Number of Reviews Above Threshold: 20194\n",
-      "Number of Reviews Below or Equal to Threshold: 33266\n"
+      "Reviews per Day Threshold: 1.0805655999832786\n",
+      "Rating Threshold: 3.863291261666425\n",
+      "Number of Filtered Reviews: 12483\n"
      ]
     }
    ],
@@ -2476,7 +2475,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('btp.csv')\n",
+    "df = pd.read_csv('threshold.csv')\n",
     "\n",
     "# Convert the 'date' column to datetime format\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
