--- a/features.ipynb
+++ b/features.ipynb
@@ -2458,16 +2458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reviews per Day Threshold: 1.0805655999832786\n",
-      "Rating Threshold: 3.863291261666425\n",
-      "Number of Filtered Reviews: 12483\n"
+      "Reviews per Day Threshold: 1.0884215241158866\n",
+      "Rating Threshold: 3.8563973063973065\n",
+      "Number of Filtered Reviews: 7716\n"
      ]
     }
    ],
@@ -2481,7 +2481,6 @@
     "df['date'] = pd.to_datetime(df['date'])\n",
     "\n",
     "# Group the reviews by 'user_id' and 'date', and count the number of reviews for each user on each day\n",
-    "\n",
     "user_reviews_per_day = df.groupby(['user_id', df['date'].dt.date]).size()\n",
     "\n",
     "# Calculate the combined average number of reviews per day\n",
@@ -2491,30 +2490,27 @@
     "threshold_reviews_per_day = combined_avg_reviews_per_day\n",
     "\n",
     "# Calculate the combined rating of all users\n",
-    "\n",
     "combined_rating = df['stars'].mean()\n",
     "\n",
     "# Determine the rating threshold based on the combined rating\n",
-    "\n",
-    "threshold_rating =  combined_rating  # Adjust the threshold as needed\n",
+    "threshold_rating = combined_rating  # Adjust the threshold as needed\n",
     "\n",
     "# Filter the users based on whether the number of reviews on any single day exceeds the threshold\n",
     "# and the rating is below the rating threshold\n",
-    "\n",
     "filtered_users = user_reviews_per_day[(user_reviews_per_day > threshold_reviews_per_day)].reset_index()\n",
     "\n",
     "# Filter the original DataFrame based on the filtered users\n",
-    "\n",
     "filtered_reviews = df[df['user_id'].isin(filtered_users['user_id'])]\n",
-    "\n",
     "filtered_reviews = filtered_reviews[filtered_reviews['stars'] < threshold_rating]\n",
     "\n",
-    "# Store the filtered reviews in a new CSV file\n",
+    "# Add the 'rule4_threshold' column (0 for filtered reviews, 1 for remaining)\n",
+    "filtered_reviews['rule4_threshold'] = 0\n",
+    "df.loc[df['user_id'].isin(filtered_reviews['user_id']), 'rule4_threshold'] = 1\n",
     "\n",
-    "filtered_reviews.to_csv('filtered_reviews_threshold.csv', index=False)\n",
+    "# Save the updated DataFrame back to the same CSV file\n",
+    "df.to_csv('threshold.csv', index=False)\n",
     "\n",
     "# Display the threshold and the number of filtered reviews\n",
-    "\n",
     "num_filtered_reviews = len(filtered_reviews)\n",
     "print(f\"Reviews per Day Threshold: {threshold_reviews_per_day}\")\n",
     "print(f\"Rating Threshold: {threshold_rating}\")\n",
