--- a/1.ipynb
+++ b/1.ipynb
@@ -358,24 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Text Length: 718.2507084481841\n",
-      "Threshold Value: 718.2507084481841\n",
-      "Number of User IDs with Text Length Above Threshold: 38211\n",
-      "Number of User IDs with Text Length Below or Equal to Threshold: 65184\n"
+      "Average Text Length: 773.362532734755\n",
+      "Threshold Value: 773.362532734755\n",
+      "Number of User IDs with Text Length Above Threshold: 20194\n",
+      "Number of User IDs with Text Length Below or Equal to Threshold: 33266\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('btp.csv')\n",
+    "data = pd.read_csv('final_dataset.csv')\n",
     "\n",
     "data['text_length'] = data['text'].apply(len)\n",
     "\n",
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
