--- a/features.ipynb
+++ b/features.ipynb
@@ -2784,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2803,7 +2803,7 @@
     "from datasketch import MinHash, MinHashLSH\n",
     "\n",
     "# Read the CSV file\n",
-    "df = pd.read_csv('final_dataset.csv')\n",
+    "df = pd.read_csv('threshold.csv')\n",
     "\n",
     "# Convert 'date' column to datetime format\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
@@ -2866,14 +2866,14 @@
     "# Calculate the threshold\n",
     "threshold = calculate_threshold(user_similarity.mean(), user_time_difference)\n",
     "\n",
-    "# Filter reviews above and below threshold\n",
-    "above_threshold_reviews = df[df['similarity_score'] > threshold]\n",
-    "below_threshold_reviews = df[df['similarity_score'] <= threshold]\n",
+    "# Label reviews based on the condition for rule6_threshold\n",
+    "df['rule6_threshold'] = df['similarity_score'].apply(lambda score: 0 if score > threshold else 1)\n",
     "\n",
+    "df.to_csv('threshold.csv', index=False)\n",
     "# Print the results\n",
     "print(f'Threshold: {threshold}')\n",
-    "print(f'Number of reviews above threshold: {above_threshold_reviews.shape[0]}')\n",
-    "print(f'Number of reviews below threshold: {below_threshold_reviews.shape[0]}')"
+    "print(f'Number of reviews above threshold: {df[df[\"rule6_threshold\"] == 0].shape[0]}')\n",
+    "print(f'Number of reviews below threshold: {df[df[\"rule6_threshold\"] == 1].shape[0]}')\n"
    ]
   },
   {
@@ -2982,6 +2982,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('threshold.csv')\n",
+    "\n",
+    "# Define the columns to check for 1's\n",
+    "columns_to_check = ['rule1_threshold', 'rule2_threshold', 'rule3_threshold', 'rule4_threshold', 'rule5_threshold', 'rule6_threshold']\n",
+    "\n",
+    "# Count the number of 1's in the specified columns for each row\n",
+    "df['count_ones'] = df[columns_to_check].sum(axis=1)\n",
+    "\n",
+    "# Determine if the count exceeds 3 and label as genuine or fake\n",
+    "df['target'] = df['count_ones'].apply(lambda x: 'genuine' if x > 3 else 'fake')\n",
+    "\n",
+    "# Save the updated dataset to final_dataset.csv\n",
+    "df.to_csv('final_dataset.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
