--- a/features.ipynb
+++ b/features.ipynb
@@ -3006,6 +3006,34 @@
     "# Save the updated dataset to final_dataset.csv\n",
     "df.to_csv('final_dataset.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of texts labeled as 'genuine': 44847\n",
+      "Number of texts labeled as 'fake': 8613\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Count the number of texts with each target label\n",
+    "target_counts = df['target'].value_counts()\n",
+    "\n",
+    "# Display the counts\n",
+    "print(\"Number of texts labeled as 'genuine':\", target_counts['genuine'])\n",
+    "print(\"Number of texts labeled as 'fake':\", target_counts['fake'])\n"
+   ]
   }
  ],
  "metadata": {
